--- a/OrderManagerApp/app/src/main/AndroidManifest.xml
+++ b/OrderManagerApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AddPizzaActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+            <meta-data
+     android:name="android.support.PARENT_ACTIVITY"
+     android:value=".MainMenuActivity" />
+        </activity>
     </application>
 
 </manifest>
