--- a/OrderManagerApp/app/src/main/AndroidManifest.xml
+++ b/OrderManagerApp/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OrderManager">
+        android:theme="@style/Theme.OrderManager"
+        android:name=".OrderManagerApp">
         <activity
             android:name=".MainMenuActivity"
             android:exported="true"
