--- a/OrderManagerApp/app/src/main/AndroidManifest.xml
+++ b/OrderManagerApp/app/src/main/AndroidManifest.xml
@@ -3,13 +3,19 @@
     package="com.cs213.ordermanager">
 
     <application
+        android:name=".OrderManagerApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OrderManager"
-        android:name=".OrderManagerApp">
+        android:theme="@style/Theme.OrderManager">
+        <activity
+            android:name=".CurrentOrderActivity"
+            android:exported="false" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainMenuActivity" />
         <activity
             android:name=".MainMenuActivity"
             android:exported="true"
@@ -25,8 +31,8 @@
             android:exported="true"
             android:label="@string/app_name">
             <meta-data
-     android:name="android.support.PARENT_ACTIVITY"
-     android:value=".MainMenuActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainMenuActivity" />
         </activity>
     </application>
 
