--- a/OrderManagerApp/app/src/main/AndroidManifest.xml
+++ b/OrderManagerApp/app/src/main/AndroidManifest.xml
@@ -11,11 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OrderManager">
         <activity
-            android:name=".CurrentOrderActivity"
+            android:name=".StoreOrdersActivity"
             android:exported="false" />
+        <activity
+            android:name=".CurrentOrderActivity"
+            android:exported="true"
+            android:label="@string/current_order">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
+        </activity>
         <activity
             android:name=".MainMenuActivity"
             android:exported="true"
@@ -29,7 +34,7 @@
         <activity
             android:name=".AddPizzaActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/add_pizza">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
