--- a/OrderManagerApp/app/src/main/AndroidManifest.xml
+++ b/OrderManagerApp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:theme="@style/Theme.OrderManager">
         <activity
             android:name=".StoreOrdersActivity"
-            android:exported="false" />
+            android:exported="false" 
+            android:label="@string/store_orders">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainMenuActivity" />
+        </activity>
         <activity
             android:name=".CurrentOrderActivity"
             android:exported="true"
